yamls/1.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gcp-con-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: con
  template:
    metadata:
      labels:
        app: con
    spec:
      containers:
      - name: gcp-con
        image: spiridon26/gcp-con:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
