yamls/3.service.yml
apiVersion: v1
kind: Service
metadata:
  name: gcp-con-service
spec:
  type: NodePort
  selector:
    app: con
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
