yamls/1.gcp-con-deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: ingress
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: "gcp-consulting.net"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: gcp-con-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gcp-con-service
spec:
  type: NodePort
  selector:
    app: con
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gcp-con-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: con
  template:
    metadata:
      labels:
        app: con
    spec:
      containers:
      - name: gcp-con
        image: spiridon26/gcp-con:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
