yamls/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: ingress
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  # rules:
  # - http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: gcp-con-service
  #           port:
  #             number: 80
  # defaultBackend:
  # service:
  #   name: gcp-con-service
  #   port:
  #     number: 8080
  spec:
  rules:
  - host: "gcp-consulting.tech"
    http:
      paths:
      - pathType: Prefix
        path: "/*"
        backend:
          service:
            name: gcp-con-service
            port:
              number: 80
